# cardboard

./: CMakeLists.txt  README.adoc  cardboard.dsp  cardboard.dsw  cardboard.ncb  cardboard.opt  cardboard.plg  cardboard.zi_  draw16.cpp  editorconfig  main.cpp  mapdata.h  rect.h  render.cpp  render.h  vblit.cpp  vectors.h  video.cpp  visplane.h
cmake/: ExternalLibraries.cmake  FindSDL2.cmake
source/: draw16.cpp  draw32.cpp  draw8.cpp  error.cpp  error.h  light.h  main.cpp  mapdata.cpp  mapdata.h  matrix.h  pixelmath.h  rect.cpp  rect.h  render.cpp  render.h  vblit.cpp  vectors.h  video.cpp  video.h  visplane.cpp  visplane.h
vc2015/: cardboard.vcxproj  cardboard.vcxproj.filters
vc2017/: cardboard.sln  cardboard.vcxproj
